--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.1",
+    "video.js": "^7.10.2",
     "vue": "^3.0.0",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^4.0.0-0",
@@ -24,6 +25,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "rtmp-streamer": "^1.0.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
   }
