--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.1",
+    "trtc-js-sdk": "^4.8.4",
     "video.js": "^7.10.2",
     "vue": "^3.0.0",
     "vue-lazyload": "^1.3.3",
