--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.28",
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.1",
