--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.1",
+    "script-ext-html-webpack-plugin": "^2.1.5",
     "trtc-js-sdk": "^4.8.4",
     "video.js": "^7.10.2",
     "vue": "^3.0.0",
@@ -28,6 +29,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "html-webpack-plugin": "^5.2.0",
     "rtmp-streamer": "^1.0.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
